--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iui",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
+  "version": "0.0.1",
+  "description": "vue components",
   "author": "all <all@in66.com>",
   "private": true,
   "scripts": {
