--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "iui",
+  "name": "in-ui",
   "version": "0.0.1",
   "description": "vue components",
   "author": "all <all@in66.com>",
-  "private": true,
+  "main": "dist/iui.min.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.dist.js",
     "build:demo": "node build/build.example.js"
   },
+  "keywords": [
+    "Vue.js",
+    "iUi",
+    "UI",
+    "UI Components"
+  ],
   "dependencies": {
     "vue": "^2.1.10",
     "vue-router": "^2.2.0"
@@ -80,5 +86,6 @@
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
-  }
+  },
+  "license": "MIT"
 }
