--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "in-ui",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "vue components",
   "author": "all <all@in66.com>",
   "main": "dist/iui.min.js",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.dist.js",
-    "build:demo": "node build/build.example.js"
+    "build:demo": "node build/build.example.js",
+    "publish": "gulp npm:publish"
   },
   "keywords": [
     "Vue.js",
-    "iUi",
+    "iui",
     "UI",
     "UI Components"
   ],
@@ -47,6 +48,8 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "gulp": "^3.9.1",
+    "gulp-bump": "^2.6.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "i-rubik": "^0.2.5",
@@ -74,6 +77,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.7",
+    "vinyl-fs": "^2.4.4",
     "vue-loader": "^10.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
