--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "in-ui",
-  "version": "0.0.5",
+  "version": "1.0.1",
   "description": "vue components",
   "author": "all <all@in66.com>",
   "main": "dist/iui.min.js",
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.dist.js",
     "build:demo": "node build/build.example.js",
-    "publish": "gulp npm:publish"
+    "release": "gulp npm:publish"
   },
   "keywords": [
     "Vue.js",
