--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "in-ui",
-  "version": "1.0.3",
+  "name": "i-ui",
+  "version": "0.0.2",
   "description": "vue components",
   "author": "all <all@in66.com>",
   "main": "dist/iui.min.js",
