--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.dist.js",
     "build:demo": "node build/build.example.js",
+    "dev1": "node scripts/dev-server.js",
+    "lib1": "node scripts/build-entry.js && node scripts/build.js",
+    "demo1": "node scripts/build.demo.js",
+    "build1": "npm run demo1 && npm run lib1",
     "release": "gulp npm:publish"
   },
-  "keywords": [ "Vue.js", "iui", "UI", "UI Components" ],
+  "keywords": [
+    "Vue.js",
+    "iui",
+    "UI",
+    "UI Components"
+  ],
   "dependencies": {
     "vue": "^2.1.10"
   },
@@ -50,6 +59,7 @@
     "http-proxy-middleware": "^0.17.3",
     "i-rubik": "^0.2.5",
     "inject-loader": "^2.0.1",
+    "iview": "^2.0.0-rc.2",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -59,6 +69,8 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "markdown-it": "^8.3.1",
+    "markdown-it-highlightjs": "^3.0.0",
     "mocha": "^3.2.0",
     "nib": "^1.1.2",
     "node-sass": "^4.5.0",
@@ -75,11 +87,13 @@
     "url-loader": "^0.5.7",
     "vinyl-fs": "^2.4.4",
     "vue-loader": "^10.3.0",
+    "vue-markdown-loader": "^0.6.2",
     "vue-router": "^2.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-config": "^7.0.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
