--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.4",
   "description": "vue components",
   "author": "all <all@in66.com>",
-  "main": "lib/index.js",
+  "main": "lib/i-ui.common.js",
   "repository": "http://githost.in66.cc/maifei/iui/tree/master",
   "scripts": {
     "start": "npm run dev",
@@ -46,7 +46,7 @@
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
