--- a/components.json
+++ b/components.json
@@ -3,5 +3,6 @@
   "i-avatar": "./packages/iAvatar/index.js",
   "I-barrage": "./packages/IBarrage/index.js",
   "i-img-upload": "./packages/iImgUpload/index.js",
-  "i-roll-bar": "./packages/iRollBar/index.js"
+  "i-roll-bar": "./packages/iRollBar/index.js",
+  "i-share-panel": "./packages/iSharePanel/index.js"
 }
