--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i-ui",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "vue components",
   "author": "all <all@in66.com>",
   "main": "lib/i-ui.common.js",
@@ -21,7 +21,7 @@
     "UI Components"
   ],
   "dependencies": {
-    "iview": "^2.0.0-rc.5",
+    "core-js": "^2.4.1",
     "vue": "^2.1.10"
   },
   "devDependencies": {
@@ -57,7 +57,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
-    "iview": "^2.0.0-rc.2",
+    "iview": "^2.0.0-rc.6",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
