--- a/components.json
+++ b/components.json
@@ -4,5 +4,6 @@
   "I-barrage": "./packages/IBarrage/index.js",
   "i-img-upload": "./packages/iImgUpload/index.js",
   "i-roll-bar": "./packages/iRollBar/index.js",
-  "i-share-panel": "./packages/iSharePanel/index.js"
+  "i-share-panel": "./packages/iSharePanel/index.js",
+  "i-video-screen": "./packages/iVideoScreen/index.js"
 }
