--- a/components.json
+++ b/components.json
@@ -7,5 +7,6 @@
   "i-roll-bar": "./packages/iRollBar/index.js",
   "i-share-panel": "./packages/iSharePanel/index.js",
   "i-video-screen": "./packages/iVideoScreen/index.js",
+  "i-canvas-video": "./packages/iCanvasVideo/index.js",
   "i-fire-works": "./packages/iFireWorks/index.js"
 }
