--- a/components.json
+++ b/components.json
@@ -8,5 +8,6 @@
   "i-share-panel": "./packages/iSharePanel/index.js",
   "i-video-screen": "./packages/iVideoScreen/index.js",
   "i-canvas-video": "./packages/iCanvasVideo/index.js",
-  "i-fire-works": "./packages/iFireWorks/index.js"
+  "i-fire-works": "./packages/iFireWorks/index.js",
+  "i-sticker": "./packages/iSticker/index.js"
 }
