--- a/components.json
+++ b/components.json
@@ -10,5 +10,6 @@
   "i-canvas-video": "./packages/iCanvasVideo/index.js",
   "i-fire-works": "./packages/iFireWorks/index.js",
   "i-sticker": "./packages/iSticker/index.js",
-  "i-loading": "./packages/iLoading/index.js"
+  "i-loading": "./packages/iLoading/index.js",
+  "imagesBox": "./packages/imagesBox/index.js"
 }
