--- a/components.json
+++ b/components.json
@@ -12,5 +12,6 @@
   "i-sticker": "./packages/iSticker/index.js",
   "i-loading": "./packages/iLoading/index.js",
   "i-images-box": "./packages/iImagesBox/index.js",
-  "i-input": "./packages/iInput/index.js"
+  "i-input": "./packages/iInput/index.js",
+  "i-update": "./packages/iUpdate/index.js"
 }
