--- a/components.json
+++ b/components.json
@@ -14,5 +14,6 @@
   "i-images-box": "./packages/iImagesBox/index.js",
   "i-input": "./packages/iInput/index.js",
   "i-img-anime": "./packages/iImgAnime/index.js",
-  "i-update": "./packages/iUpdate/index.js"
+  "i-update": "./packages/iUpdate/index.js",
+  "i-error": "./packages/iError/index.js"
 }
