add wxshare and vaildPhone

--- a/components.json
+++ b/components.json
@@ -15,5 +15,6 @@
   "i-input": "./packages/iInput/index.js",
   "i-img-anime": "./packages/iImgAnime/index.js",
   "i-update": "./packages/iUpdate/index.js",
+  "i-wx-share": "./packages/iWxShare/index.js",
   "i-error": "./packages/iError/index.js"
 }
